--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -17,8 +17,47 @@ bibliography: references.bib
 #| message: false
 
 library(tidyverse)
-library(palmerpenguins)
+library(knitr)
+library(dplyr)
+library(ggplot2)
 ```
+
+Questionnaires or surveys are among the most common methods of data collection in statistical research studies. Sometimes, in order to detect possible patterns, errors, and biases, researchers collect responses from participants more than once. One of the common challenges researchers usually encounter is the non-response rate. As my group members and I discovered during second paper when attempting to replicate the research paper by @feldman, we found a high portion of responses to be null during the second data collection period (@fig-decline-response). This indicates a relatively high non-response rate.
+
+To connect the non-response rate aspect of the editorial "Special Virtual Issue on Nonresponse Rates and Nonresponse Adjustments" [@OxfordAcademic] with Feldman and their colleagues’ paper [@feldman], the statistical programming language `R` [@citeR] with libraries `tidyverse` [@tidyverse], `dplyr` [@dplyr], `knitr` [@knitr], and `ggplot2` [@ggplot2] are used for the purpose of this short writing.
+
+```{r}
+#| label: fig-decline-response
+#| fig-cap: Descriptive summary of Job Satisfaction Likert Scale Responses
+#| fig-subcap: ["Job Satisfaction (T1)","Job Satisfaction (T2)"]
+#| layout-ncol: 2
+#| echo: false
+#| warning: false
+#| message: false
+
+data_freq <- read.csv(here::here("data/analysis_data/jobsatT1_data_freq.csv"))           
+# Create the bar chart
+ggplot(data_freq, aes(x = Question, y = Percent, fill = factor(Response))) +
+  geom_bar(stat = "identity") +
+  scale_fill_brewer(palette = "Blues", name = "Response") +
+  labs(x = "Question", y = "Percentage",caption = "Note. 1 = strongly disagree, 7 = strongly agree") +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+
+data2_freq <- read.csv(here::here("data/analysis_data/jobsatT2_data_freq.csv")) 
+# Create the bar chart
+ggplot(data2_freq, aes(x = Question, y = Percent, fill = factor(Response))) +
+  geom_bar(stat = "identity") +
+  scale_fill_brewer(palette = "Blues", name = "Response") +
+  labs(x = "Question", y = "Percentage",caption = "Note. 1 = strongly disagree, 7 = strongly agree") +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+
+```
+
+\break
+
+According to @Williams_Brick_2018, response rates are falling across all modes of data collection overall. Response rates to web modes, as reported in the study, are lower than those for other modes of data collection. The paper also suggests that this trend will likely continue through 2022 and beyond. Since the data set for Study 2 of @feldman was collected by using an online survey for workers, the trend we detected in terms of the decrease in response rate at the second round of response collection could be explained by the fact that the response rates declining, especially online, for the recent years.
 
 
 \newpage
