Updated paper, bib, and llm files

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -44,7 +44,9 @@
   publisher={Sage Publications Sage CA: Los Angeles, CA}
   }
 
-@misc{OxfordAcademic, 
+@article{OxfordAcademic, 
+  title = {Special Virtual Issue on Nonresponse Rates and Nonresponse Adjustments},
+  author = {Oxford Academic},
   url={https://academic.oup.com/jssam/pages/special-virtual-issue-on-nonresponse-rates-and-nonresponse-adjustments?login=true#Williams%20and%20Brick%202018}, 
   journal={Oxford Academic}
   } 
@@ -75,5 +77,22 @@
   note = {R package version 1.0.10},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+
+@article{nonresponseBias,
+ ISSN = {0033362X, 15375331},
+ URL = {http://www.jstor.org/stable/25167621},
+ abstract = {Fifty-nine methodological studies were designed to estimate the magnitude of nonresponse bias in statistics of interest. These studies use a variety of designs: sampling frames with rich variables, data from administrative records matched to sample case, use of screening-interview data to describe nonrespondents to main interviews, followup of nonrespondents to initial phases of field effort, and measures of behavior intentions to respond to a survey. This permits exploration of which circumstances produce a relationship between nonresponse rates and nonresponse bias and which, do not. The predictors are design features of the surveys, characteristics of the sample, and attributes of the survey statistics computed in the surveys.},
+ author = {Robert M. Groves and Emilia Peytcheva},
+ journal = {The Public Opinion Quarterly},
+ number = {2},
+ pages = {167--189},
+ publisher = {[Oxford University Press, American Association for Public Opinion Research]},
+ title = {The Impact of Nonresponse Rates on Nonresponse Bias: A Meta-Analysis},
+ urldate = {2024-03-04},
+ volume = {72},
+ year = {2008}
+}
+
+
 
   
